@@ -1,3 +1,9 @@
+2015-06-02  Esa Peuha  <esa.peuha@gmail.com>
+
+	* lib/make-imglib.c, lib/xwin.c: Change png_ptr->jmpbuf to
+	  png_jmpbuf(png_ptr)
+	* lib/xwin.c: Change voidp to png_voidp
+
 2015-05-31  Esa Peuha  <esa.peuha@gmail.com>
 
 	* INSTALL, config.guess, config.sub, depcomp, install-sh,
